tests/neg/semantic_errno_text_bad_type.baa
// EXPECT: نوع المعامل 1 في 'نص_كود_خطأ' غير متوافق

صحيح الرئيسية() {
    نص س = نص_كود_خطأ("x").
    إرجع ٠.
}
